# iammusic

./: .gitignore  pyproject.toml
api/: models.py  serializers.py
api/migrations/: 0001_initial.py
backend/: settings.py
users/: models.py  serializers.py
users/migrations/: 0001_initial.py
